...

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="29dp"
...

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/visualiserButton"
                    android:layout_width="110dp"
                    android:layout_height="25dp"
...

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/diyButton"
                    android:layout_width="110dp"
                    android:layout_height="25dp"
...

                            <SeekBar
                                android:id="@+id/seekbar"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
...

                            <ImageButton
                                android:id="@+id/restartButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
...

                            <ImageButton
                                android:id="@+id/previousButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
...

                            <ImageButton
                                android:id="@+id/pauseButton"
                                android:layout_width="17dp"
                                android:layout_height="17dp"
...

                            <ImageButton
                                android:id="@+id/playButton"
                                android:layout_width="17dp"
                                android:layout_height="17dp"
...

                            <ImageButton
                                android:id="@+id/nextButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
...

                            <ImageButton
                                android:id="@+id/endButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/deleteButton"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/searchButton"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
...

                <ImageButton
                    android:id="@+id/button_insert"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
...
                </ImageButton>
                <ImageButton
                    android:id="@+id/button_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
...
                </ImageButton>
                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
...

                <EditText
                    android:id="@+id/input_nodes"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/preorderButton"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/inorderButton"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
...

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/postorderButton"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
...
                        android:layout_height="match_parent">
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_save"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
...
                        </androidx.appcompat.widget.AppCompatButton>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_load"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
...
                        </androidx.appcompat.widget.AppCompatButton>
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_delete_all"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
...
